Thu Mar 17 10:03:50 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py: remove a couple of bugs

Wed Mar 16 19:40:03 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py lib/util.py po/POTFILES.in: implementation of userdb,
	  doesn't write back on changes yet.

2005-03-16  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: subst a subdir of sysconfdir
	for xinitrc rather than using sysconfdir
	directly.

	* admin-tool/Makefile.am: upd. for above change.
	Needed because sysconfdir may be passed as an
	argument to make itself.

	* sabayon.spec.in: changes to bring in line with
	Fedora guidelines. Most notable change is that
	it uses the fedora-usermgmt scripts for creating
	users.
	Note, the uid/gid will need to be registered somewhere
	like http://www.fedora.us/wiki/PackageUserRegistry

2005-03-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: add userswindow.py
	
	* lib/Makefile.am: add userdb.py

2005-03-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/userswindow.py: fix silly.

2005-03-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: set $DISABLE_SABAYON_XINITRC
	when running our protosession.
	
	* admin-tool/sabayon-xinitrc.sh.in: don't run
	sabayon-apply if $DISABLE_SABAYON_XINITRC is set.
	
	* lib/userdb.py: add silly impl. of the stubs for
	testing.

2005-03-16  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: set XINITRCDIR and INSTALL_XINITRC_SCRIPT
	on Fedora.
	
	* admin-tool/sabayon-xinitrc.sh.in: add xinitrc script
	to run sabayon-apply at login.
	
	* admin-tool/Makefile.am: install sabayon-xinitrc.sh.

2005-03-15  John Dennis  <jdennis@redhat.com>

	* Expand mozilla functionality. The MozillaChange class has more
	info. An individual pref in a javascript file is now its own
	class. We now recognize the different javascript pref functions
	and record them. We now have two new functions for writing a
	javascript pref file. More get_* functions for various