@@ -1,3 +1,7 @@
+Thu Mar 17 22:44:53 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/userdb.py: adding saving back on changes.
+
 Thu Mar 17 10:03:50 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* lib/userdb.py: remove a couple of bugs
